test_regress/t/t_alias_unsup.out
%Error: Internal Error: t/t_alias_unsup.v:46:11: ../V3Localize.cpp:#: AstVarRef not under function
   46 |    alias {a[7:0],a[15:8],a[23:16],a[31:24]} = b;
      |           ^
                        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
